style.css
html body {
    margin: 0;
    padding: 0;
    width: 100vw;
    height: 100vh;
    background-color: #c3e2f8;
}


/*
.bg-image {
    background-image: url("tennis-net.jpg");
}
*/
.card {
    max-width: 360px;
    margin-right: 4px;
    margin-left: 4px;
    border-color: blue;
}
.footer-links:hover {
    text-decoration: none;
}
.info-rows {
    margin-left: 50px;
    padding-right: 100px;
}
.sample-video {
    width: 580px;
}

@media (max-width: 575px) {
    .info-rows {
        margin-left: 0;
        padding-left: 0;
        padding-right: 100px;
    }
    .info-content {
        text-align: center;
        padding-right: 0;
        padding-left: 0;
    }
}

